--- a/회고록/12-22.md
+++ b/회고록/12-22.md
@@ -13,3 +13,8 @@
               4^9
               
     생각할점 -> 문제를 풀기전에 조건에대한 인과관계를 살펴본다.
+
+3. 백준 수 묶기
+   처음생각 -> 완전탐색 -> dfs로 묶거나 그냥 넘기거나  --> 시간초과
+
+   해결방법 -> dp사용 dp로 이전값들을 이용해서 바로이전과 현재를 묶거나 (dp[i]=dp[i-2]+map[i-1]*map[i]) 묶지 않는다 =>(dp[i]=dp[i-1]+map[i])를 비교
